force-app/main/default/objects/Lead/fields/AnexaContratoSocial__c.field-meta.xml
<CustomField>
    <fullName>AnexaContratoSocial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anexa contrato social</label>
    <type>Checkbox</type>
</CustomField>