force-app/main/default/objects/Lead/fields/AnexaRegimeEspecial__c.field-meta.xml
<CustomField>
    <fullName>AnexaRegimeEspecial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anexa regime especial</label>
    <type>Checkbox</type>
</CustomField>