force-app/main/default/objects/Lead/fields/Aprovado_pelo_Gerente__c.field-meta.xml
<CustomField>
    <fullName>Aprovado_pelo_Gerente__c</fullName>
    <label>Aprovado pelo Gerente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>