force-app/main/default/objects/Lead/fields/Bairro__c.field-meta.xml
<CustomField>
    <fullName>Bairro__c</fullName>
    <label>Bairro</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>