force-app/main/default/objects/Lead/fields/Bandeira__c.field-meta.xml
<CustomField>
    <fullName>Bandeira__c</fullName>
    <label>Bandeira</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cod_Canal__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KEKO</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
            <value>
                <fullName>HYUNDAI</fullName>
            </value>
            <value>
                <fullName>FORD</fullName>
            </value>
            <value>
                <fullName>RENAULT</fullName>
            </value>
            <value>
                <fullName>PEUGEOT</fullName>
            </value>
            <value>
                <fullName>TOYOTA</fullName>
            </value>
            <value>
                <fullName>HONDA</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>VOLKS</fullName>
            </value>
            <value>
                <fullName>NISSAN</fullName>
            </value>
            <value>
                <fullName>MIT</fullName>
            </value>
            <value>
                <fullName>MERCEDES</fullName>
            </value>
            <value>
                <fullName>JEEP/RAM</fullName>
            </value>
            <value>
                <fullName>AGRALE</fullName>
                <isActive>false</isActive>
                <label>AGRALE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>