force-app/main/default/objects/Lead/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segmento__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AFTER ME</fullName>
            </value>
            <value>
                <fullName>KEKO USA</fullName>
            </value>
            <value>
                <fullName>AFTER MI</fullName>
            </value>
            <value>
                <fullName>FIAT ARMAZEM</fullName>
            </value>
            <value>
                <fullName>FORD ARMAZEM CAJAMAR</fullName>
            </value>
            <value>
                <fullName>FORD ARMAZEM SP BARUERI</fullName>
            </value>
            <value>
                <fullName>GM ARMAZEM DSH</fullName>
            </value>
            <value>
                <fullName>HONDA REPOSICAO</fullName>
            </value>
            <value>
                <fullName>MITSUBISHI ARMAZEM</fullName>
            </value>
            <value>
                <fullName>NISSAN ARMAZEM</fullName>
            </value>
            <value>
                <fullName>PEUGEOT ARMAZEM</fullName>
            </value>
            <value>
                <fullName>RENAULT ARMAZEM</fullName>
            </value>
            <value>
                <fullName>TOYOTA ARMAZEM</fullName>
            </value>
            <value>
                <fullName>TOYOTA ARMAZEM ARGENTINA</fullName>
            </value>
            <value>
                <fullName>TOYOTA TSUSHO</fullName>
            </value>
            <value>
                <fullName>VOLKSWAGEN ARMAZEM</fullName>
            </value>
            <value>
                <fullName>FIAT ARGENTINA</fullName>
            </value>
            <value>
                <fullName>FIAT ASIA</fullName>
            </value>
            <value>
                <fullName>FIAT/PEUGEOT URUGUAI</fullName>
            </value>
            <value>
                <fullName>FORD ALEMANHA</fullName>
            </value>
            <value>
                <fullName>FORD AMERICA LATINA</fullName>
            </value>
            <value>
                <fullName>FORD ARGENTINA</fullName>
            </value>
            <value>
                <fullName>FORD CHILE</fullName>
            </value>
            <value>
                <fullName>FORD INDIA</fullName>
            </value>
            <value>
                <fullName>FORD MEXICO</fullName>
            </value>
            <value>
                <fullName>FORD PERU</fullName>
            </value>
            <value>
                <fullName>GM AMERICA LATINA</fullName>
            </value>
            <value>
                <fullName>GM ARGENTINA</fullName>
            </value>
            <value>
                <fullName>GM CHILE</fullName>
            </value>
            <value>
                <fullName>GM EQUADOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>