force-app/main/default/objects/Lead/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cidade da Mesorregião</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>