force-app/main/default/objects/Lead/fields/CobrancaBairro__c.field-meta.xml
<CustomField>
    <fullName>CobrancaBairro__c</fullName>
    <label>Bairro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>