force-app/main/default/objects/Lead/fields/CobrancaCEP__c.field-meta.xml
<CustomField>
    <fullName>CobrancaCEP__c</fullName>
    <label>CEP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>