force-app/main/default/objects/Lead/fields/CobrancaCidade__c.field-meta.xml
<CustomField>
    <fullName>CobrancaCidade__c</fullName>
    <label>Cidade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>