force-app/main/default/objects/Lead/fields/CobrancaEstado__c.field-meta.xml
<CustomField>
    <fullName>CobrancaEstado__c</fullName>
    <label>Estado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>