force-app/main/default/objects/Lead/fields/CobrancaPais__c.field-meta.xml
<CustomField>
    <fullName>CobrancaPais__c</fullName>
    <label>País</label>
    <length>100</length>
    <type>Text</type>
</CustomField>