force-app/main/default/objects/Lead/fields/CobrancaRua__c.field-meta.xml
<CustomField>
    <fullName>CobrancaRua__c</fullName>
    <label>Rua</label>
    <length>255</length>
    <type>Text</type>
</CustomField>