force-app/main/default/objects/Lead/fields/Cod_Canal__c.field-meta.xml
<CustomField>
    <fullName>Cod_Canal__c</fullName>
    <description>Código do Canal</description>
    <label>Cod Canal</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Canal__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>901</fullName>
            </value>
            <value>
                <fullName>905</fullName>
            </value>
            <value>
                <fullName>907</fullName>
            </value>
            <value>
                <fullName>908</fullName>
            </value>
            <value>
                <fullName>909</fullName>
            </value>
            <value>
                <fullName>910</fullName>
            </value>
            <value>
                <fullName>911</fullName>
            </value>
            <value>
                <fullName>912</fullName>
            </value>
            <value>
                <fullName>915</fullName>
            </value>
            <value>
                <fullName>916</fullName>
            </value>
            <value>
                <fullName>920</fullName>
            </value>
            <value>
                <fullName>921</fullName>
            </value>
            <value>
                <fullName>922</fullName>
            </value>
            <value>
                <fullName>929</fullName>
            </value>
            <value>
                <fullName>930</fullName>
            </value>
            <value>
                <fullName>931</fullName>
            </value>
            <value>
                <fullName>932</fullName>
            </value>
            <value>
                <fullName>933</fullName>
            </value>
            <value>
                <fullName>934</fullName>
            </value>
            <value>
                <fullName>935</fullName>
            </value>
            <value>
                <fullName>936</fullName>
            </value>
            <value>
                <fullName>938</fullName>
            </value>
            <value>
                <fullName>939</fullName>
            </value>
            <value>
                <fullName>940</fullName>
            </value>
            <value>
                <fullName>941</fullName>
            </value>
            <value>
                <fullName>942</fullName>
            </value>
            <value>
                <fullName>943</fullName>
            </value>
            <value>
                <fullName>944</fullName>
            </value>
            <value>
                <fullName>945</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>