force-app/main/default/objects/Lead/fields/Codigo_Suframa__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Suframa__c</fullName>
    <label>Código Suframa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>