force-app/main/default/objects/Lead/fields/Como_e_por_que_o_Lead_chegou_ate_a_KEKO__c.field-meta.xml
<CustomField>
    <fullName>Como_e_por_que_o_Lead_chegou_ate_a_KEKO__c</fullName>
    <label>Como e por que o Lead chegou até a KEKO?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>