force-app/main/default/objects/Lead/fields/Condicoes_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Condicoes_de_Pagamento__c</fullName>
    <inlineHelpText>indique qual seria a condição de pagamento preferencial do cliente</inlineHelpText>
    <label>Condições de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apresentação</fullName>
            </value>
            <value>
                <fullName>Antecipado 7DD</fullName>
            </value>
            <value>
                <fullName>À vista 21DD</fullName>
            </value>
            <value>
                <fullName>30 dias em 1x 30 DD</fullName>
            </value>
            <value>
                <fullName>30 dias em 2x 20/40DD</fullName>
            </value>
            <value>
                <fullName>30 dias em 3x 20/30/40DD</fullName>
            </value>
            <value>
                <fullName>30 dias em 4x 20/25/35/40DD</fullName>
            </value>
            <value>
                <fullName>30 dias em 5x 20/25/30/35/40DD</fullName>
            </value>
            <value>
                <fullName>45 dias em 2x (30/60DD)</fullName>
            </value>
            <value>
                <fullName>45 dias em 3x (30/45/60DD)</fullName>
            </value>
            <value>
                <fullName>45 dias em 4x (30/40/50/60DD)</fullName>
            </value>
            <value>
                <fullName>45 dias em 5x (25/35/45/55/65DD)</fullName>
            </value>
            <value>
                <fullName>60 dias em 3x (30/60/90DD)</fullName>
            </value>
            <value>
                <fullName>60 dias em 4x (30/50/70/90DD)</fullName>
            </value>
            <value>
                <fullName>60 dias em 5x (30/45/60/75/90DD)</fullName>
            </value>
            <value>
                <fullName>60 dias em 7x (30/40/50/60/70/80/90DD)</fullName>
            </value>
            <value>
                <fullName>75 dias em 3x (30/75/120DD)</fullName>
            </value>
            <value>
                <fullName>75 dias em 4x (30/60/90/120DD)</fullName>
            </value>
            <value>
                <fullName>75 dias em 5x (30/55/75/95/120DD)</fullName>
            </value>
            <value>
                <fullName>75 dias em 7x (30/45/60/75/90/105/120DD)</fullName>
            </value>
            <value>
                <fullName>30 dias</fullName>
                <isActive>false</isActive>
                <label>30 dias</label>
            </value>
            <value>
                <fullName>45 dias</fullName>
                <isActive>false</isActive>
                <label>45 dias</label>
            </value>
            <value>
                <fullName>60 dias</fullName>
                <isActive>false</isActive>
                <label>60 dias</label>
            </value>
            <value>
                <fullName>75 dias</fullName>
                <isActive>false</isActive>
                <label>75 dias</label>
            </value>
            <value>
                <fullName>teste</fullName>
                <isActive>false</isActive>
                <label>teste</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>