force-app/main/default/objects/Lead/fields/contador_familia__c.field-meta.xml
<CustomField>
    <fullName>contador_familia__c</fullName>
    <description>Contador para verificar quantos itens foram selecionados</description>
    <formula>IF(INCLUDES(Cliente_comprar_quais_fam_de_produto__c, &quot;Capota Marítima&quot;), 1, 0) +
IF(INCLUDES(Cliente_comprar_quais_fam_de_produto__c, &quot;Capota Rígida&quot;), 1, 0) +
     IF(INCLUDES(Cliente_comprar_quais_fam_de_produto__c, &quot;Estribo&quot;), 1, 0) +
     IF(INCLUDES(Cliente_comprar_quais_fam_de_produto__c, &quot;Estribo Elétrico&quot;), 1, 0) +
     IF(INCLUDES(Cliente_comprar_quais_fam_de_produto__c, &quot;Santo Antônio&quot;), 1, 0) +
     IF(INCLUDES(Cliente_comprar_quais_fam_de_produto__c, &quot;Engate de Reboque&quot;), 1, 0) +
     IF(INCLUDES(Cliente_comprar_quais_fam_de_produto__c, &quot;Utilitários&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>contador família</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>