force-app/main/default/objects/Lead/fields/De_quem_a_loja_compra_hoje__c.field-meta.xml
<CustomField>
    <fullName>De_quem_a_loja_compra_hoje__c</fullName>
    <label>De quem a loja compra hoje?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>