force-app/main/default/objects/Lead/fields/Descricao_da_loja__c.field-meta.xml
<CustomField>
    <fullName>Descricao_da_loja__c</fullName>
    <label>Descricao da loja</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>