force-app/main/default/objects/Lead/fields/detalhesMotivoPerda__c.field-meta.xml
<CustomField>
    <fullName>detalhesMotivoPerda__c</fullName>
    <description>Campo necessário para quando o usuário selecionar &quot;outros motivos&quot; como motivo da perda.</description>
    <inlineHelpText>Descreva com mais informações o motivo da perda.</inlineHelpText>
    <label>Informe mais sobre o motivo da perda</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>