force-app/main/default/objects/Lead/fields/E_uma_loja_unica_ou_pertence_a_um_grupo__c.field-meta.xml
<CustomField>
    <fullName>E_uma_loja_unica_ou_pertence_a_um_grupo__c</fullName>
    <label>É uma loja única ou pertence a um grupo?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>