force-app/main/default/objects/Lead/fields/email_comercial__c.field-meta.xml
<CustomField>
    <fullName>email_comercial__c</fullName>
    <label>Email comercial</label>
    <type>Email</type>
</CustomField>