force-app/main/default/objects/Lead/fields/email_financeiro__c.field-meta.xml
<CustomField>
    <fullName>email_financeiro__c</fullName>
    <label>Email financeiro</label>
    <type>Email</type>
</CustomField>