force-app/main/default/objects/Lead/fields/EnderecoCobrancaIgualEntrega__c.field-meta.xml
<CustomField>
    <fullName>EnderecoCobrancaIgualEntrega__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endereço de cobrança igual ao de entrega</label>
    <type>Checkbox</type>
</CustomField>