force-app/main/default/objects/Lead/fields/Esta_loja_tem_outros_tipos_de_servicos__c.field-meta.xml
<CustomField>
    <fullName>Esta_loja_tem_outros_tipos_de_servicos__c</fullName>
    <label>Esta loja tem outros tipos de serviço?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>