force-app/main/default/objects/Lead/fields/Ha_quanto_tempo_a_loja_existe__c.field-meta.xml
<CustomField>
    <fullName>Ha_quanto_tempo_a_loja_existe__c</fullName>
    <label>Há quanto tempo a loja existe?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>