force-app/main/default/objects/Lead/fields/JustificativaNegativa__c.field-meta.xml
<CustomField>
    <fullName>JustificativaNegativa__c</fullName>
    <inlineHelpText>Informe uma justificativa com o motivo do cliente ser relevante para dar continuidade no processo de aprovação dele.</inlineHelpText>
    <label>Justificativa</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>