force-app/main/default/objects/Lead/fields/Justique__c.field-meta.xml
<CustomField>
    <fullName>Justique__c</fullName>
    <label>Justique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>