force-app/main/default/objects/Lead/fields/LeadProcessoAvaliacao__c.field-meta.xml
<CustomField>
    <fullName>LeadProcessoAvaliacao__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Lead/&quot; + Id + &quot;/view&quot;, FirstName + &quot; &quot; + LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead em Avaliação</label>
    <type>Text</type>
</CustomField>