force-app/main/default/objects/Lead/fields/MesoregiaoCidade__c.field-meta.xml
<CustomField>
    <fullName>MesoregiaoCidade__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Mesorregiao__c/&quot; +  CASESAFEID(Cidade__r.Mesorregiao__r.Id) + &quot;/view&quot;, Cidade__r.Mesorregiao__r.Name, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mesorregião</label>
    <type>Text</type>
</CustomField>