force-app/main/default/objects/Lead/fields/MotivoContato__c.field-meta.xml
<CustomField>
    <fullName>MotivoContato__c</fullName>
    <description>Campo utilizado para preenchimento do VI ou GE com o motivo do contato com o cliente.</description>
    <inlineHelpText>Insira um texto com o motivo do cliente estar em contato com a Keko.</inlineHelpText>
    <label>Motivo do Contato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>