force-app/main/default/objects/Lead/fields/MotivoPerda__c.field-meta.xml
<CustomField>
    <fullName>MotivoPerda__c</fullName>
    <label>Motivo da Perda</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Achou muito caro</fullName>
            </value>
            <value>
                <fullName>Baixo volume (encaminhado para Distribuidor)</fullName>
            </value>
            <value>
                <fullName>Compra de oportunidade</fullName>
            </value>
            <value>
                <fullName>Fiel a outra marca</fullName>
            </value>
            <value>
                <fullName>Interesse somente em Capota Rígida</fullName>
            </value>
            <value>
                <fullName>Outro motivo</fullName>
            </value>
            <value>
                <fullName>Prazo de entrega muito longo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>