force-app/main/default/objects/Lead/fields/MunicipalRegistration__c.field-meta.xml
<CustomField>
    <fullName>MunicipalRegistration__c</fullName>
    <label>Inscrição Municipal</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>