force-app/main/default/objects/Lead/fields/Necessito_aprovacao_do_Gerente__c.field-meta.xml
<CustomField>
    <fullName>Necessito_aprovacao_do_Gerente__c</fullName>
    <label>Necessito aprovação do Gerente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim, levar para Validação do Gerente</fullName>
            </value>
            <value>
                <fullName>Não, mudar status para Perdido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>