force-app/main/default/objects/Lead/fields/Nome_do_contato_principal__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_contato_principal__c</fullName>
    <label>Nome do contato principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>