force-app/main/default/objects/Lead/fields/NomeAbreviado__c.field-meta.xml
<CustomField>
    <fullName>NomeAbreviado__c</fullName>
    <label>Nome Abreviado</label>
    <length>12</length>
    <type>Text</type>
</CustomField>