force-app/main/default/objects/Lead/fields/O_primeiro_pedido_sera_de_6000__c.field-meta.xml
<CustomField>
    <fullName>O_primeiro_pedido_sera_de_6000__c</fullName>
    <label>O primeiro pedido será de R$6.000,00?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>