force-app/main/default/objects/Lead/fields/Observacao_Financeiro__c.field-meta.xml
<CustomField>
    <fullName>Observacao_Financeiro__c</fullName>
    <label>Observação Financeiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>