force-app/main/default/objects/Lead/fields/Outras_observacoes_importantes__c.field-meta.xml
<CustomField>
    <fullName>Outras_observacoes_importantes__c</fullName>
    <label>Outras observações importantes:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>