force-app/main/default/objects/Lead/fields/Qual_o_tamanho_da_cidade_que_ela_esta__c.field-meta.xml
<CustomField>
    <fullName>Qual_o_tamanho_da_cidade_que_ela_esta__c</fullName>
    <label>Qual o tamanho da cidade que ela está?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>