force-app/main/default/objects/Lead/fields/QuantidadeProdutos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeProdutos__c</fullName>
    <description>Este campo verifica se cliente selecionou menos de 3 produtos (no campo &quot;Cliente comprará quais fam. de produto?&quot;). Caso o usuário tenha selecionado menos de 3 produtos, esse campo indicará que o campo &quot;Justificativa Negativa&quot; pode ficar visível para preenchimento.</description>
    <formula>PICKLISTCOUNT(Cliente_comprar_quais_fam_de_produto__c) &gt; 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade de Produtos</label>
    <type>Checkbox</type>
</CustomField>